--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,9 +1,9 @@
 \section{Классы}
 Классы с их кратким описанием.\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classCsvWriter_1_1CsvWriter}{Csv\+Writer.\+Csv\+Writer} \\*Класс, пишущий данные в {\ttfamily .csv} формат }{\pageref{classCsvWriter_1_1CsvWriter}}{}
-\item\contentsline{section}{\hyperlink{classdata__mining_1_1items_1_1DataMiningItem}{data\+\_\+mining.\+items.\+Data\+Mining\+Item} }{\pageref{classdata__mining_1_1items_1_1DataMiningItem}}{}
-\item\contentsline{section}{\hyperlink{classdata__mining_1_1pipelines_1_1DataMiningPipeline}{data\+\_\+mining.\+pipelines.\+Data\+Mining\+Pipeline} }{\pageref{classdata__mining_1_1pipelines_1_1DataMiningPipeline}}{}
-\item\contentsline{section}{\hyperlink{classdata__mining_1_1middlewares_1_1DataMiningSpiderMiddleware}{data\+\_\+mining.\+middlewares.\+Data\+Mining\+Spider\+Middleware} }{\pageref{classdata__mining_1_1middlewares_1_1DataMiningSpiderMiddleware}}{}
-\item\contentsline{section}{\hyperlink{classdata__mining_1_1spiders_1_1reestr__spider_1_1ReestrSpider}{data\+\_\+mining.\+spiders.\+reestr\+\_\+spider.\+Reestr\+Spider} \\*Класс паука }{\pageref{classdata__mining_1_1spiders_1_1reestr__spider_1_1ReestrSpider}}{}
+\item\contentsline{section}{\hyperlink{classitems_1_1DataMiningItem}{items.\+Data\+Mining\+Item} }{\pageref{classitems_1_1DataMiningItem}}{}
+\item\contentsline{section}{\hyperlink{classpipelines_1_1DataMiningPipeline}{pipelines.\+Data\+Mining\+Pipeline} }{\pageref{classpipelines_1_1DataMiningPipeline}}{}
+\item\contentsline{section}{\hyperlink{classmiddlewares_1_1DataMiningSpiderMiddleware}{middlewares.\+Data\+Mining\+Spider\+Middleware} }{\pageref{classmiddlewares_1_1DataMiningSpiderMiddleware}}{}
+\item\contentsline{section}{\hyperlink{classreestr__spider_1_1ReestrSpider}{reestr\+\_\+spider.\+Reestr\+Spider} \\*Класс паука }{\pageref{classreestr__spider_1_1ReestrSpider}}{}
 \item\contentsline{section}{\hyperlink{classUrlsReceiver_1_1UrlsReceiver}{Urls\+Receiver.\+Urls\+Receiver} \\*Получатель списка ссылок }{\pageref{classUrlsReceiver_1_1UrlsReceiver}}{}
 \end{DoxyCompactList}
