--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -2,14 +2,14 @@
 Иерархия классов.\begin{DoxyCompactList}
 \item \contentsline{section}{Csv\+Writer.\+Csv\+Writer}{\pageref{classCsvWriter_1_1CsvWriter}}{}
 \item Item\begin{DoxyCompactList}
-\item \contentsline{section}{data\+\_\+mining.\+items.\+Data\+Mining\+Item}{\pageref{classdata__mining_1_1items_1_1DataMiningItem}}{}
+\item \contentsline{section}{items.\+Data\+Mining\+Item}{\pageref{classitems_1_1DataMiningItem}}{}
 \end{DoxyCompactList}
 \item object\begin{DoxyCompactList}
-\item \contentsline{section}{data\+\_\+mining.\+middlewares.\+Data\+Mining\+Spider\+Middleware}{\pageref{classdata__mining_1_1middlewares_1_1DataMiningSpiderMiddleware}}{}
-\item \contentsline{section}{data\+\_\+mining.\+pipelines.\+Data\+Mining\+Pipeline}{\pageref{classdata__mining_1_1pipelines_1_1DataMiningPipeline}}{}
+\item \contentsline{section}{middlewares.\+Data\+Mining\+Spider\+Middleware}{\pageref{classmiddlewares_1_1DataMiningSpiderMiddleware}}{}
+\item \contentsline{section}{pipelines.\+Data\+Mining\+Pipeline}{\pageref{classpipelines_1_1DataMiningPipeline}}{}
 \end{DoxyCompactList}
 \item Spider\begin{DoxyCompactList}
-\item \contentsline{section}{data\+\_\+mining.\+spiders.\+reestr\+\_\+spider.\+Reestr\+Spider}{\pageref{classdata__mining_1_1spiders_1_1reestr__spider_1_1ReestrSpider}}{}
+\item \contentsline{section}{reestr\+\_\+spider.\+Reestr\+Spider}{\pageref{classreestr__spider_1_1ReestrSpider}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{Urls\+Receiver.\+Urls\+Receiver}{\pageref{classUrlsReceiver_1_1UrlsReceiver}}{}
 \end{DoxyCompactList}
