--- a/latex/md_README.tex
+++ b/latex/md_README.tex
@@ -1,1 +1,28 @@
-задание для летней практики 
+
+\begin{DoxyItemize}
+\item Задание для летней практики 2017
+\end{DoxyItemize}
+
+Приложение -\/ консольное.
+
+Чтобы запустить программу, необходимо написать следующие команды в терминале\+: 
+\begin{DoxyCode}
+git clone https://github.com/moskanka/DataMining
+./get-reestr-mtmc.sh
+\end{DoxyCode}
+
+
+В процессе работы приложение заходит на \href{https://reestr.minsvyaz.ru/reestr/}{\tt сайт Единого реестра российских программ для ЭВМ и БД} и собирает оттуда необходимую информацию. Результаты записываются в файл {\ttfamily reestr.\+csv}, а так же выдаются прямо в консоль в {\ttfamily csv}-\/формате
+
+Кодировка {\ttfamily csv}-\/файла\+: U\+T\+F-\/8 без B\+OM.
+
+Ошибки выдаются в отдельном потоке -\/ {\ttfamily stderror}
+
+{\bfseries Пример работы программы для одной из программ реестра\+:}
+
+
+\begin{DoxyItemize}
+\item Страница продукта\+: 
+\item Выходной {\ttfamily csv}-\/файл\+: 
+\item Если во входных данных нет искомого поля, то в него ставится значение по умолчанию, а если оно не оговоренно, то поле оставляется пустым. 
+\end{DoxyItemize}
