--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -142,7 +142,7 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
-\chapter{Data\+Mining}
+\chapter{Автоматический веб-\/агрегатор для создания единой базы сертифицированных средств защиты информации}
 \label{md_README}
 \Hypertarget{md_README}
 \input{md_README}
@@ -152,10 +152,10 @@
 \input{annotated}
 \chapter{Классы}
 \input{classCsvWriter_1_1CsvWriter}
-\input{classdata__mining_1_1items_1_1DataMiningItem}
-\input{classdata__mining_1_1pipelines_1_1DataMiningPipeline}
-\input{classdata__mining_1_1middlewares_1_1DataMiningSpiderMiddleware}
-\input{classdata__mining_1_1spiders_1_1reestr__spider_1_1ReestrSpider}
+\input{classitems_1_1DataMiningItem}
+\input{classpipelines_1_1DataMiningPipeline}
+\input{classmiddlewares_1_1DataMiningSpiderMiddleware}
+\input{classreestr__spider_1_1ReestrSpider}
 \input{classUrlsReceiver_1_1UrlsReceiver}
 %--- End generated contents ---
 
