--- a/latex/classUrlsReceiver_1_1UrlsReceiver.tex
+++ b/latex/classUrlsReceiver_1_1UrlsReceiver.tex
@@ -8,11 +8,11 @@
 \subsection*{Открытые члены}
 \begin{DoxyCompactItemize}
 \item 
-def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_ae4ba1b935dce3bd30912583beca32aff}{\+\_\+\+\_\+init\+\_\+\+\_\+} (self, main\+\_\+url)
+def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_ae4ba1b935dce3bd30912583beca32aff}{\+\_\+\+\_\+init\+\_\+\+\_\+} (self, \hyperlink{classUrlsReceiver_1_1UrlsReceiver_a26ea003c345156c0e7cdeb49750b15f2}{main\+\_\+url})
 \begin{DoxyCompactList}\small\item\em Конструктор \end{DoxyCompactList}\item 
 def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_a448316919bfe59e35942edc34f2b674b}{get\+\_\+html\+\_\+code} (self, url)
-\begin{DoxyCompactList}\small\item\em Метод, получающий html-\/кода страницы \end{DoxyCompactList}\item 
-def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_ace2cdcb9a1bb117d80ec0efad2b2374b}{get\+\_\+urls\+\_\+from\+\_\+page} (self, page\+\_\+num)
+\begin{DoxyCompactList}\small\item\em Метод, получающий {\itshape {\bfseries html}}-\/кода страницы \end{DoxyCompactList}\item 
+def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_ace2cdcb9a1bb117d80ec0efad2b2374b}{get\+\_\+urls\+\_\+from\+\_\+page} (self, \hyperlink{classUrlsReceiver_1_1UrlsReceiver_af9f409bb62f37a08c7fc7eb37e07dd2a}{page\+\_\+num})
 \begin{DoxyCompactList}\small\item\em Метод, собирающий ссылки с одной страницы \end{DoxyCompactList}\item 
 def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_a1dfd347420ffce5e3c510feb8a436d30}{make\+\_\+url} (self, url)
 \begin{DoxyCompactList}\small\item\em Метод, приводящий в нормальный вид ссылку, полученную из html-\/кода страницы \end{DoxyCompactList}\item 
@@ -24,29 +24,26 @@ def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_abf0eed73148dbb302da0b4a09efb49
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_a26ea003c345156c0e7cdeb49750b15f2}\label{classUrlsReceiver_1_1UrlsReceiver_a26ea003c345156c0e7cdeb49750b15f2}} 
-{\bfseries main\+\_\+url}
-\item 
+\hyperlink{classUrlsReceiver_1_1UrlsReceiver_a26ea003c345156c0e7cdeb49750b15f2}{main\+\_\+url}
+\begin{DoxyCompactList}\small\item\em Ссылка, которой инициализируется класс \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_a4a9800032de527abd7fbc8dfed704d53}\label{classUrlsReceiver_1_1UrlsReceiver_a4a9800032de527abd7fbc8dfed704d53}} 
-{\bfseries html\+\_\+code}
-\item 
-\mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_afd8cf89e02fd746d77d6074eeacaec0e}\label{classUrlsReceiver_1_1UrlsReceiver_afd8cf89e02fd746d77d6074eeacaec0e}} 
-{\bfseries answer}
-\item 
+\hyperlink{classUrlsReceiver_1_1UrlsReceiver_a4a9800032de527abd7fbc8dfed704d53}{html\+\_\+code}
+\begin{DoxyCompactList}\small\item\em Текст, обрабатываемой страницы \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_aa118829b177026eba1f6701b7178fbfb}\label{classUrlsReceiver_1_1UrlsReceiver_aa118829b177026eba1f6701b7178fbfb}} 
-{\bfseries urls}
-\item 
+\hyperlink{classUrlsReceiver_1_1UrlsReceiver_aa118829b177026eba1f6701b7178fbfb}{urls}
+\begin{DoxyCompactList}\small\item\em Массив ссылок с одной страницы реестра \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_af9f409bb62f37a08c7fc7eb37e07dd2a}\label{classUrlsReceiver_1_1UrlsReceiver_af9f409bb62f37a08c7fc7eb37e07dd2a}} 
-{\bfseries page\+\_\+num}
-\item 
+\hyperlink{classUrlsReceiver_1_1UrlsReceiver_af9f409bb62f37a08c7fc7eb37e07dd2a}{page\+\_\+num}
+\begin{DoxyCompactList}\small\item\em Количество страниц в реестре \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_ad10c955c9e74df17b8f5f9cc6a80a5e7}\label{classUrlsReceiver_1_1UrlsReceiver_ad10c955c9e74df17b8f5f9cc6a80a5e7}} 
-{\bfseries context}
-\end{DoxyCompactItemize}
+\hyperlink{classUrlsReceiver_1_1UrlsReceiver_ad10c955c9e74df17b8f5f9cc6a80a5e7}{context}
+\begin{DoxyCompactList}\small\item\em Переменная, для запросов к страницам \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Подробное описание}
 Получатель списка ссылок 
 
-Класс, с помощью которого можно получить список ссылок на все российские прораммы для ЭВМ и БД из единого реестра {\ttfamily \href{https://reestr.minsvyaz.ru/reestr/}{\tt https\+://reestr.\+minsvyaz.\+ru/reestr/}} 
+Класс, с помощью которого можно получить список ссылок на все российские прораммы для ЭВМ и БД из единого реестра {\itshape {\bfseries \href{https://reestr.minsvyaz.ru/reestr/}{\tt https\+://reestr.\+minsvyaz.\+ru/reestr/}}} 
 
 \subsection{Конструктор(ы)}
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_ae4ba1b935dce3bd30912583beca32aff}\label{classUrlsReceiver_1_1UrlsReceiver_ae4ba1b935dce3bd30912583beca32aff}} 
@@ -77,7 +74,7 @@ def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_abf0eed73148dbb302da0b4a09efb49
 
 
 
-Метод, получающий html-\/кода страницы 
+Метод, получающий {\itshape {\bfseries html}}-\/кода страницы 
 
 
 \begin{DoxyParams}{Аргументы}
@@ -86,7 +83,7 @@ def \hyperlink{classUrlsReceiver_1_1UrlsReceiver_abf0eed73148dbb302da0b4a09efb49
 {\em url} & Ссылка на страницу, html-\/код которой необходимо получить\\
 \hline
 \end{DoxyParams}
-html-\/код страницы получается с помощью библиотеки {\ttfamily urllib.\+request}. Далее он записывается в поле {\ttfamily self.\+html\+\_\+code}. \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_a871a6b2bc7d65cd8ea6184061f994592}\label{classUrlsReceiver_1_1UrlsReceiver_a871a6b2bc7d65cd8ea6184061f994592}} 
+html-\/код страницы получается с помощью библиотеки {\itshape {\bfseries urllib.\+request}}. Далее он записывается в поле {\itshape {\bfseries self.\+html\+\_\+code}}. \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_a871a6b2bc7d65cd8ea6184061f994592}\label{classUrlsReceiver_1_1UrlsReceiver_a871a6b2bc7d65cd8ea6184061f994592}} 
 \index{Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}!get\+\_\+max\+\_\+page\+\_\+num@{get\+\_\+max\+\_\+page\+\_\+num}}
 \index{get\+\_\+max\+\_\+page\+\_\+num@{get\+\_\+max\+\_\+page\+\_\+num}!Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}}
 \subsubsection{\texorpdfstring{get\+\_\+max\+\_\+page\+\_\+num()}{get\_max\_page\_num()}}
@@ -96,7 +93,7 @@ html-\/код страницы получается с помощью библи
 
 Метод, получающий количество страниц в реестре 
 
-В переменную {\ttfamily self.\+page\+\_\+num} записывается число страниц в реестре с ссылками на ПО \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_ace2cdcb9a1bb117d80ec0efad2b2374b}\label{classUrlsReceiver_1_1UrlsReceiver_ace2cdcb9a1bb117d80ec0efad2b2374b}} 
+В переменную {\itshape {\bfseries self.\+page\+\_\+num}} записывается число страниц в реестре с ссылками на ПО \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_ace2cdcb9a1bb117d80ec0efad2b2374b}\label{classUrlsReceiver_1_1UrlsReceiver_ace2cdcb9a1bb117d80ec0efad2b2374b}} 
 \index{Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}!get\+\_\+urls\+\_\+from\+\_\+page@{get\+\_\+urls\+\_\+from\+\_\+page}}
 \index{get\+\_\+urls\+\_\+from\+\_\+page@{get\+\_\+urls\+\_\+from\+\_\+page}!Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}}
 \subsubsection{\texorpdfstring{get\+\_\+urls\+\_\+from\+\_\+page()}{get\_urls\_from\_page()}}
@@ -113,7 +110,7 @@ html-\/код страницы получается с помощью библи
 {\em page\+\_\+num} & Номер страницы реестра, с которой получается список ссылок\\
 \hline
 \end{DoxyParams}
-Внутри метода составлено регулярное выражение, по которому выбираются все ссылки в html-\/коде страницы, после чего записываются в файл {\ttfamily urls.\+txt}. После обработки очередной страницы в стандартный вывод пишется ее номер. \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_a1dfd347420ffce5e3c510feb8a436d30}\label{classUrlsReceiver_1_1UrlsReceiver_a1dfd347420ffce5e3c510feb8a436d30}} 
+Внутри метода составлено регулярное выражение, по которому выбираются все ссылки в html-\/коде страницы, после чего записываются в файл {\itshape {\bfseries urls.\+txt}}. После обработки очередной страницы в стандартный вывод пишется ее номер. \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_a1dfd347420ffce5e3c510feb8a436d30}\label{classUrlsReceiver_1_1UrlsReceiver_a1dfd347420ffce5e3c510feb8a436d30}} 
 \index{Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}!make\+\_\+url@{make\+\_\+url}}
 \index{make\+\_\+url@{make\+\_\+url}!Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}}
 \subsubsection{\texorpdfstring{make\+\_\+url()}{make\_url()}}
@@ -125,11 +122,11 @@ html-\/код страницы получается с помощью библи
 
 
 \begin{DoxyParams}{Аргументы}
-{\em url} & Строка вида {\ttfamily /reestr/123456/} \\
+{\em url} & Строка вида {\itshape {\bfseries /reestr/123456/}} \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Возвращает}
-Ссылку вида {\ttfamily \href{https://reestr.minsvyaz.ru/reestr/123456}{\tt https\+://reestr.\+minsvyaz.\+ru/reestr/123456}} 
+Ссылку вида {\itshape {\bfseries \href{https://reestr.minsvyaz.ru/reestr/123456}{\tt https\+://reestr.\+minsvyaz.\+ru/reestr/123456}}} 
 \end{DoxyReturn}
 \mbox{\Hypertarget{classUrlsReceiver_1_1UrlsReceiver_abf0eed73148dbb302da0b4a09efb4940}\label{classUrlsReceiver_1_1UrlsReceiver_abf0eed73148dbb302da0b4a09efb4940}} 
 \index{Urls\+Receiver\+::\+Urls\+Receiver@{Urls\+Receiver\+::\+Urls\+Receiver}!parse\+\_\+reestr@{parse\+\_\+reestr}}
@@ -141,7 +138,7 @@ html-\/код страницы получается с помощью библи
 
 Главный метод 
 
-Метод, после запуска которого последовательно обходятся все страницы с ссылками реестра , с которых в файл {\ttfamily urls.\+txt} записываются ссылки на продукты, каждую из которых впоследствии надо будет обработать и составить {\ttfamily .csv} файл 
+Метод, после запуска которого последовательно обходятся все страницы с ссылками реестра, с которых в файл {\itshape {\bfseries urls.\+txt}} записываются ссылки на продукты, каждую из которых впоследствии надо будет обработать и составить {\itshape {\bfseries .csv}}-\/файл 
 
 Объявления и описания членов класса находятся в файле\+:\begin{DoxyCompactItemize}
 \item 
