--- a/latex/md_README.tex
+++ b/latex/md_README.tex
@@ -24,5 +24,15 @@ git clone https://github.com/moskanka/DataMining
 \begin{DoxyItemize}
 \item Страница продукта\+: 
 \item Выходной {\ttfamily csv}-\/файл\+: 
-\item Если во входных данных нет искомого поля, то в него ставится значение по умолчанию, а если оно не оговоренно, то поле оставляется пустым. 
+\item Если во входных данных нет искомого поля, то в него ставится значение по умолчанию, а если оно не оговоренно, то поле оставляется пустым.
 \end{DoxyItemize}
+
+{\bfseries Документация функций и классов\+:}
+
+Чтобы открыть документацию к этому приложению необходимо написать в терминале (находясь в корневой папке проекта)\+: 
+\begin{DoxyCode}
+doxygen Doxyfile
+cd html
+gnome-open index.html
+\end{DoxyCode}
+ Так же можно вручную открыть файл {\ttfamily index.\+html} в удобном вам браузере. 
