--- a/latex/namespacereestr__spider.tex
+++ b/latex/namespacereestr__spider.tex
@@ -5,7 +5,38 @@
 Паук для страницы реестра  
 
 
+\subsection*{Классы}
+\begin{DoxyCompactItemize}
+\item 
+class \hyperlink{classreestr__spider_1_1ReestrSpider}{Reestr\+Spider}
+\begin{DoxyCompactList}\small\item\em Класс паука \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Функции}
+\begin{DoxyCompactItemize}
+\item 
+def \hyperlink{namespacereestr__spider_a3ea2fa58027d32fc4f77d612777789fe}{get\+\_\+urls} ()
+\begin{DoxyCompactList}\small\item\em Функция, получающая список ссылок \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Переменные}
+\begin{DoxyCompactItemize}
+\item 
+\mbox{\Hypertarget{namespacereestr__spider_a91a73e9f55aafc7333ccec0b50381179}\label{namespacereestr__spider_a91a73e9f55aafc7333ccec0b50381179}} 
+\hyperlink{namespacereestr__spider_a91a73e9f55aafc7333ccec0b50381179}{csv\+\_\+worker} = cw.\+Csv\+Writer()
+\begin{DoxyCompactList}\small\item\em Объект класса Csv\+Writer Объект класса Csv\+Writer, с помощью которого класс \hyperlink{classreestr__spider_1_1ReestrSpider}{Reestr\+Spider} сохраняет полученные со страниц реестра данные в формате .csv. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Подробное описание}
 Паук для страницы реестра 
+
+\subsection{Функции}
+\mbox{\Hypertarget{namespacereestr__spider_a3ea2fa58027d32fc4f77d612777789fe}\label{namespacereestr__spider_a3ea2fa58027d32fc4f77d612777789fe}} 
+\index{reestr\+\_\+spider@{reestr\+\_\+spider}!get\+\_\+urls@{get\+\_\+urls}}
+\index{get\+\_\+urls@{get\+\_\+urls}!reestr\+\_\+spider@{reestr\+\_\+spider}}
+\subsubsection{\texorpdfstring{get\+\_\+urls()}{get\_urls()}}
+{\footnotesize\ttfamily def reestr\+\_\+spider.\+get\+\_\+urls (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Функция, получающая список ссылок 
+
+\begin{DoxyReturn}{Возвращает}
+Список ссылок на страницы реестра, которые считываются из файла \textquotesingle{}urls.\+txt\textquotesingle{} 
+\end{DoxyReturn}
