--- a/latex/namespaces.tex
+++ b/latex/namespaces.tex
@@ -1,4 +1,6 @@
 \section{Пакеты}
 Полный список документированных пакетов.\begin{DoxyCompactList}
+\item\contentsline{section}{\hyperlink{namespaceget__urlslist}{get\+\_\+urlslist} \\*Модуль получения списка ссылок }{\pageref{namespaceget__urlslist}}{}
+\item\contentsline{section}{\hyperlink{namespaceprint__results}{print\+\_\+results} \\*Модуль вывода результатов в консоль из файла {\bfseries {\itshape reestr.\+csv}} }{\pageref{namespaceprint__results}}{}
 \item\contentsline{section}{\hyperlink{namespacereestr__spider}{reestr\+\_\+spider} \\*Паук для страницы реестра }{\pageref{namespacereestr__spider}}{}
 \end{DoxyCompactList}
