--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -146,10 +146,16 @@
 \label{md_README}
 \Hypertarget{md_README}
 \input{md_README}
+\chapter{Алфавитный указатель пространств имен}
+\input{namespaces}
 \chapter{Иерархический список классов}
 \input{hierarchy}
 \chapter{Алфавитный указатель классов}
 \input{annotated}
+\chapter{Пространства имен}
+\input{namespaceget__urlslist}
+\input{namespaceprint__results}
+\input{namespacereestr__spider}
 \chapter{Классы}
 \input{classCsvWriter_1_1CsvWriter}
 \input{classitems_1_1DataMiningItem}
